--- a/settings.jsonc
+++ b/settings.jsonc
@@ -5,12 +5,12 @@
     "localMode": "normal",
     "maxRetry": 20, //max number of retries
     "timeout": 20,
-    "threads": 1,
+    "threads": 5,
     "uniqeCheck": false,
     "proxy": null,
     "backend": "httpx<python>", //default module to be used to send requests
  // Cache settings
-    "localCache": true, // no cache will be saved on local runs.
+    "localCache": true, // If false no cache will be saved on local runs.
     "noCache": false, // If true cache feature will be compleately desabled.
     "cacheExpire": {
                     // time period to clear the cache available params -> day, week, , hour, minute, second, millisecond, microsecond.
